--- a/en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
+++ b/en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Our Free Packages - List Of Free Packages"
-permalink: /en/969_Our-free-packages/list-of-free-packages/nexss-blog.html
+title: "BLOG Modern Web - Interesting Html5 Tags"
+permalink: /en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/969_Our-free-packages/list-of-free-packages/nexss-blog.html
 </script>
 
   <title>
-    BLOG Our Free Packages - List Of Free Packages
+    BLOG Modern Web - Interesting Html5 Tags
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="List Of Free Packages - Nexss Programmer Blog">
-  <link rel="canonical" href="/969_Our-free-packages/list-of-free-packages/nexss-blog.html">
+  <meta name="description" content="Interesting Html5 Tags - Nexss Programmer Blog">
+  <link rel="canonical" href="/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Our Free Packages - List Of Free Packages">
+  <meta property="og:description" content="BLOG Modern Web - Interesting Html5 Tags">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /en/969_Our-free-packages/list-of-free-packages/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -177,52 +177,102 @@ permalink: /en/969_Our-free-packages/list-of-free-packages/nexss-blog.html
                   </ul>
                 <h3>Modern Web</h3>
         <ul>
-                    <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a class="active" href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html"><strong>Interesting Html5 Tags</strong> </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
                     <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a class="active" href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html"><strong>List Of Free Packages</strong> </a></li>
+                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
                     <li><a href="en/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
                     <li><a href="en/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>List of Nexss Programmer Packages</h1>
-<h2>@nexssp - free / Open Source packages</h2>
-<ul>
-<li>Here you can find the whol list of distributed packages <a href="https://www.npmjs.com/search?q=nexssp">@nexssp - packages</a></li>
-</ul>
-<h3>Cli tools and libraries</h3>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a> - nexss programmer - all tools, languages together</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/command">@nexssp/<strong>command</strong></a> - easy terminal commands</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/config">@nexssp/<strong>config</strong></a> - config system yml, json</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/file">@nexssp/<strong>file</strong></a> - file templates with over 50 programming language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/ensure">@nexssp/<strong>ensure</strong></a> - ensure mulitple os packages installed</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/cache">@nexssp/<strong>cache</strong></a> - caching library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/language">@nexssp/<strong>language</strong></a> - install programming environments, manage packages for each language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/min">@nexssp/<strong>min</strong></a> - minimizing library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/os">@nexssp/<strong>os</strong></a> - multiple os library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/package">@nexssp/<strong>package</strong></a> - managing Nexss Programmer packages (git repositories)</li>
-<li>@nexssp/<strong>process</strong> - managing process library (will be added in future versions - it is available up to 2.4.x as nexss programmer feature)</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/project">@nexssp/<strong>project</strong></a> - managing Nexss Programmer projects, create new</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/test">@nexssp/<strong>test</strong></a> - testing library</li>
-</ul>
-<h3>Libraries</h3>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/ansi">@nexssp/<strong>ansi</strong></a> - colors, cursor</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/const">@nexssp/<strong>const</strong></a> - constants in JS/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/data">@nexssp/<strong>data</strong></a> - data validate, test</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/dddebug">@nexssp/<strong>dddebug</strong></a> - debugging functions</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/expression-parser">@nexssp/<strong>expression-parser</strong></a> - variable template system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/extend">@nexssp/<strong>extend</strong></a> - extend standard functions of JavaScript/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/logdebug">@nexssp/<strong>logdebug</strong></a> - logging, debugging script</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/packunpack">@nexssp/<strong>packunpack</strong></a> - pack/unpack library with .gitignore</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/plugin">@nexssp/<strong>plugin</strong> </a>- plugin system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/stack">@nexssp/<strong>stack</strong></a> - pretty error stack</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/system">@nexssp/<strong>system</strong></a> - run system commands</li>
-</ul>
+        <h1>Interesting HTML5 tags</h1>
+<p>Here is the list of interesting <strong>HTML5</strong> tags to save time and not implementing them unnecessarily in <strong>JavaScript</strong>.</p>
+<h2>Inputs</h2>
+<h3>color</h3>
+<pre><code class="language-html">&lt;input type="color" /&gt;</code></pre>
+<input type="color">
+<h3>range</h3>
+<pre><code class="language-html">&lt;input type="range" value="2" min="10" max="200" /&gt;</code></pre>
+<input type="range" value="2" min="10" max="200">
+<h3>datetime-local</h3>
+<pre><code class="language-html">&lt;input type="datetime-local" /&gt;</code></pre>
+<input type="datetime-local">
+<h3>time</h3>
+<pre><code class="language-html">&lt;input type="time" /&gt;</code></pre>
+<input type="time">
+<h3>week</h3>
+<pre><code class="language-html">&lt;input type="week" /&gt;</code></pre>
+<input type="week">
+<h3>month</h3>
+<pre><code class="language-html">&lt;input type="month" /&gt;</code></pre>
+<input type="month">
+<h3>number</h3>
+<pre><code class="language-html">&lt;input type="number" /&gt;</code></pre>
+<input type="number">
+<h3>search</h3>
+<pre><code class="language-html">&lt;input type="search" /&gt;</code></pre>
+<input type="search">
+<p>have extra button to clear the input</p>
+<h3>tel</h3>
+<pre><code class="language-html">&lt;input type="tel" /&gt;</code></pre>
+<input type="tel">
+<h3>url</h3>
+<pre><code class="language-html">&lt;input type="url" /&gt;</code></pre>
+<input type="url">
+<h3>email</h3>
+<pre><code class="language-html">&lt;input type="email" /&gt;</code></pre>
+<input type="email">
+<h2>Other Tags</h2>
+<h3>datalist</h3>
+<pre><code class="language-html">&lt;input type="text" list="suggestions" size="50px" placeholder="search" /&gt;
+&lt;datalist id="suggestions"&gt;
+
+&lt;option value="myValue"&gt;Details: some extra details&lt;/option&gt;
+&lt;option&gt;Some other info&lt;/option&gt;
+&lt;/datalist&gt;</code></pre>
+<input type="text" list="suggestions" size="50px" placeholder="search">
+<datalist id="suggestions">
+
+<option value="myValue">Details: some extra details</option>
+<option>Some other info</option>
+</datalist>
+<h3>details/summary</h3>
+<pre><code class="language-html">&lt;details&gt;
+  &lt;summary&gt;Something here&lt;/summary&gt;
+  &lt;p&gt;Some info after click on the title&lt;/p&gt;
+&lt;/details&gt;</code></pre>
+<details>
+  <summary>Something here</summary>
+  <p>Some info after click on the title</p>
+</details>
+<h3>select/opt-group</h3>
+<pre><code class="language-html">&lt;select&gt;
+    &lt;optgroup label="important"&gt;
+      &lt;option&gt;x&lt;/option&gt;
+      &lt;option&gt;y&lt;/option&gt;
+    &lt;/optgroup&gt;
+    &lt;option&gt;z&lt;/option&gt;
+  &lt;/select&gt;</code></pre>
+<select>
+    <optgroup label="important">
+      <option>x</option>
+      <option>y</option>
+    </optgroup>
+    <option>z</option>
+  </select>
+<style>
+    input:not([type="color"]) {
+        background: rgba(0,0,0,0.1);
+        border-radius: 4px;
+        box-sizing: border-box;
+        padding: 12px 20px;
+        transition: 0.3s ease;
+    }
+
+</style>
       </div>
     </div>
   </div>
