--- a/en/11_blog-nexss-programmer/tutorials/nexss-blog.html
+++ b/en/11_blog-nexss-programmer/tutorials/nexss-blog.html
@@ -175,6 +175,10 @@ permalink: /en/11_blog-nexss-programmer/tutorials/nexss-blog.html
         <ul>
                     <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
+                <h3>Modern Web</h3>
+        <ul>
+                    <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                  </ul>
                 <h3>Our Free Packages</h3>
         <ul>
                     <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
