--- a/pl/11_blog-nexss-programmer/installation/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/installation/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Nexss Programmer - Installation"
 permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
