--- a/pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
+++ b/pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Bitwig Studio - Bitwig VST Video Player"
 permalink: /pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
