--- a/pl/969_Our-free-packages/@nexssp-command/nexss-blog.html
+++ b/pl/969_Our-free-packages/@nexssp-command/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Our Free Packages - @nexssp Command"
 permalink: /pl/969_Our-free-packages/@nexssp-command/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
