--- a/pl/21_Node.js/npm-link-unlink/nexss-blog.html
+++ b/pl/21_Node.js/npm-link-unlink/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Node.js - Npm Link Unlink"
 permalink: /pl/21_Node.js/npm-link-unlink/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
