--- a/pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Blender 3D - Custom Scripting Templates"
 permalink: /pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
