--- a/pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
+++ b/pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
@@ -2,7 +2,7 @@
 title: "BLOG Modern Web - Interesting Html5 Tags"
 permalink: /pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
