--- a/pl/fund.html
+++ b/pl/fund.html
@@ -2,7 +2,7 @@
 title: ""
 permalink: /pl/fund.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
