--- a/pl/index.html
+++ b/pl/index.html
@@ -2,7 +2,7 @@
 title: "Innovative programming solutions for your business - Nexss.com"
 permalink: /pl/index.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
