--- a/pl/latwa-instalacja-nexss-programmer.html
+++ b/pl/latwa-instalacja-nexss-programmer.html
@@ -2,7 +2,7 @@
 title: "Łatwa instalacja - Darmowy Open Source Nexss Programmer"
 permalink: /pl/latwa-instalacja-nexss-programmer.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
