--- a/pl/nexss-programmer-features.html
+++ b/pl/nexss-programmer-features.html
@@ -2,7 +2,7 @@
 title: "Funkcje  -  Open Source - Darmowy Nexss Programmer"
 permalink: /pl/nexss-programmer-features.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
