--- a/pl/nexss-programming-languages.html
+++ b/pl/nexss-programming-languages.html
@@ -2,7 +2,7 @@
 title: "Obsługiwane języki programowania i Kontakt - Nexss Programmer - Nexss.com"
 permalink: /pl/nexss-programming-languages.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
