--- a/pl/open-source-hindi-translation-specialist-intern/index36/nexss-career-job-details.html
+++ b/pl/open-source-hindi-translation-specialist-intern/index36/nexss-career-job-details.html
@@ -2,7 +2,7 @@
 title: "Open Source Hindi Translation Specialist - Intern - JOB Openings - nexss.com"
 permalink: /pl/open-source-hindi-translation-specialist-intern/index36/nexss-career-job-details.html
 ---
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
