--- a/en/21_Node.js/lockfileVersion-issue/nexss-blog.html
+++ b/en/21_Node.js/lockfileVersion-issue/nexss-blog.html
@@ -154,6 +154,7 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
                     <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="en/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
                     <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
