--- a/pl/11_blog-nexss-programmer/frontend/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/frontend/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Our Free Packages - List Of Free Packages"
-permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
+title: "BLOG Nexss Programmer - Frontend"
+permalink: /pl/11_blog-nexss-programmer/frontend/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="pl"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
 </script>
 
   <title>
-    BLOG Our Free Packages - List Of Free Packages
+    BLOG Nexss Programmer - Frontend
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="List Of Free Packages - Nexss Programmer Blog">
+  <meta name="description" content="Frontend - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Our Free Packages - List Of Free Packages">
+  <meta property="og:description" content="BLOG Nexss Programmer - Frontend">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">EN</a>
+                <a href="/en/11_blog-nexss-programmer/frontend/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/11_blog-nexss-programmer/frontend/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -154,7 +154,7 @@ permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
+                    <li><a class="active" href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html"><strong>Frontend</strong> </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
@@ -183,47 +183,33 @@ permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
                 <h3>Our Free Packages</h3>
         <ul>
                     <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a class="active" href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html"><strong>List Of Free Packages</strong> </a></li>
+                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
                     <li><a href="pl/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
                     <li><a href="pl/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>List of Nexss Programmer Packages</h1>
-<h2>@nexssp - free / Open Source packages</h2>
+        <h1>Frontend functionalities</h1>
+<h2>List of Tutorials</h2>
 <ul>
-<li>Here you can find the whol list of distributed packages <a href="https://www.npmjs.com/search?q=nexssp">@nexssp - packages</a></li>
+<li><a href="/pl/11_blog-nexss-programmer/frontend/nexss-blog.html#createnewproject">Create New Project vue2, react17</a></li>
 </ul>
-<h3>Cli tools and libraries</h3>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a> - nexss programmer - all tools, languages together</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/command">@nexssp/<strong>command</strong></a> - easy terminal commands</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/config">@nexssp/<strong>config</strong></a> - config system yml, json</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/file">@nexssp/<strong>file</strong></a> - file templates with over 50 programming language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/ensure">@nexssp/<strong>ensure</strong></a> - ensure mulitple os packages installed</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/cache">@nexssp/<strong>cache</strong></a> - caching library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/language">@nexssp/<strong>language</strong></a> - install programming environments, manage packages for each language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/min">@nexssp/<strong>min</strong></a> - minimizing library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/os">@nexssp/<strong>os</strong></a> - multiple os library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/package">@nexssp/<strong>package</strong></a> - managing Nexss Programmer packages (git repositories)</li>
-<li>@nexssp/<strong>process</strong> - managing process library (will be added in future versions - it is available up to 2.4.x as nexss programmer feature)</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/project">@nexssp/<strong>project</strong></a> - managing Nexss Programmer projects, create new</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/test">@nexssp/<strong>test</strong></a> - testing library</li>
-</ul>
-<h3>Libraries</h3>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/ansi">@nexssp/<strong>ansi</strong></a> - colors, cursor</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/const">@nexssp/<strong>const</strong></a> - constants in JS/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/data">@nexssp/<strong>data</strong></a> - data validate, test</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/dddebug">@nexssp/<strong>dddebug</strong></a> - debugging functions</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/expression-parser">@nexssp/<strong>expression-parser</strong></a> - variable template system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/extend">@nexssp/<strong>extend</strong></a> - extend standard functions of JavaScript/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/logdebug">@nexssp/<strong>logdebug</strong></a> - logging, debugging script</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/packunpack">@nexssp/<strong>packunpack</strong></a> - pack/unpack library with .gitignore</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/plugin">@nexssp/<strong>plugin</strong> </a>- plugin system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/stack">@nexssp/<strong>stack</strong></a> - pretty error stack</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/system">@nexssp/<strong>system</strong></a> - run system commands</li>
-</ul>
+<p><a name="createnewproject"></a></p>
+<h3>Create new Frontend Project</h3>
+<p>To create new project (now: <strong>vue2</strong>, <strong>react17</strong>)</p>
+<p>Execute the commands accordingly:</p>
+<pre><code class="language-sh">nexss p vue2 myvue2-project
+nexss p vue2 myvue2-project --install
+nexss p react17 react17-project
+</code></pre>
+<h3>Run hot reloading</h3>
+<pre><code class="language-sh"># development
+npm run dev # need before hot
+npm run hot # hot reloading
+</code></pre>
+<h3>Build production bundle</h3>
+<pre><code class="language-sh"># production
+npm run production</code></pre>
       </div>
     </div>
   </div>
