--- a/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
+++ b/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
@@ -154,6 +154,7 @@ permalink: /11_blog-nexss-programmer/package_json_usage/nexss-blog.html
                     <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
                     <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a class="active" href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html"><strong>Package_json_usage</strong> </a></li>
                   </ul>
                 <h3>Node.js</h3>
