--- a/en/11_blog-nexss-programmer/frontend/nexss-blog.html
+++ b/en/11_blog-nexss-programmer/frontend/nexss-blog.html
@@ -1,8 +1,8 @@
 ---
-title: "BLOG Nexss Programmer - Package_json_usage"
-permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
+title: "BLOG Nexss Programmer - Frontend"
+permalink: /en/11_blog-nexss-programmer/frontend/nexss-blog.html
 ---
-<!DOCTYPE html><html lang="pl"><head>
+<!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,16 +13,16 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Package_json_usage
+    BLOG Nexss Programmer - Frontend
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Package_json_usage - Nexss Programmer Blog">
-  
+  <meta name="description" content="Frontend - Nexss Programmer Blog">
+  <link rel="canonical" href="/11_blog-nexss-programmer/frontend/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Package_json_usage">
+  <meta property="og:description" content="BLOG Nexss Programmer - Frontend">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -51,18 +51,18 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Polska
+                86-005, Prądki, Poland
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/11_blog-nexss-programmer/frontend/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/11_blog-nexss-programmer/frontend/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="en/index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="en/nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="en/nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="en/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="en/index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="en/nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="en/nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="en/nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -147,70 +147,69 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="en/0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
-                    <li><a class="active" href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html"><strong>Package_json_usage</strong> </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a class="active" href="en/11_blog-nexss-programmer/frontend/nexss-blog.html"><strong>Frontend</strong> </a></li>
+                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
-                    <li><a href="pl/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
+                    <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="en/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a href="pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                    <li><a href="en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Modern Web</h3>
         <ul>
-                    <li><a href="pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
+                    <li><a href="en/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
+                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexssp-command/nexss-blog.html">@nexssp Command </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexssp-os/nexss-blog.html">@nexssp Os </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Nexss Programmer with package.json</h1>
-<p>Use Nexss Programmer to run programs platform dependent.</p>
-<p>create few programs in any language. and use <strong>--nxsPlatform</strong> to tell which platform to use.</p>
+        <h1>Frontend functionalities</h1>
+<h2>List of Tutorials</h2>
 <ul>
-<li><strong>nxsPlatfrom</strong> - Nexss Programmer allow to run any line related to the OS, OS version.
-It uses for it <strong>process.platform</strong> and <strong>process.distroTag1</strong>, <strong>process.distroTag2</strong> (Implemented in the Nexss Programmer)</li>
+<li><a href="/en/11_blog-nexss-programmer/frontend/nexss-blog.html#createnewproject">Create New Project vue2, react17</a></li>
 </ul>
-<pre><code class="language-sh"># this program will be run only on windows and freebsd.
-nexss myprogram.ps1 --nxsPlatform="win32,freebsd"</code></pre>
-<h2>List of platform supported</h2>
-<ul>
-<li>aix</li>
-<li>darwin</li>
-<li>freebsd</li>
-<li>linux</li>
-<li>openbsd</li>
-<li>sunos</li>
-<li>win32</li>
-</ul>
-<h2>Distro Tags</h2>
-<pre><code class="language-sh">nexss -env # see the distro tags aswell as more information about version of the system.</code></pre>
-<p>In the nxsPlatform you can use also distro tag. Use <strong>nexss -env</strong> to see the platforms tags. You can use even with version. So for example Windows have 2 tags: Windows and Windows10. If you will use Windows10 will run only on Windows10, if you use Windows it will run on all Windowses. You can use also Distro Linux tag. If you use <strong>Fedora,Ubuntu18</strong> it will run only on Fedora and Ubuntu version 18. etc etc.</p>
+<p><a name="createnewproject"></a></p>
+<h3>Create new Frontend Project</h3>
+<p>To create new project (now: <strong>vue2</strong>, <strong>react17</strong>)</p>
+<p>Execute the commands accordingly:</p>
+<pre><code class="language-sh">nexss p vue2 myvue2-project
+nexss p vue2 myvue2-project --install
+nexss p react17 react17-project
+</code></pre>
+<h3>Run hot reloading</h3>
+<pre><code class="language-sh"># development
+npm run dev # need before hot
+npm run hot # hot reloading
+</code></pre>
+<h3>Build production bundle</h3>
+<pre><code class="language-sh"># production
+npm run production</code></pre>
       </div>
     </div>
   </div>
@@ -287,14 +286,14 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">O nas</h4>
+        <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
+          <li><a href="en/index.html#services">Services</a></li>
+          <li><a class="career" href="en/nexss-career.html">Career</a>
 </li>
-          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
+          <li><a href="en/nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+          <li><a href="en/faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -302,60 +301,60 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
-          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Instalacja</a>
+          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
+          <li><a href="en/easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
+            <a href="en/nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
+            <a href="en/nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="pl/programmer.html">Dokumentacja</a>
+            <a href="en/programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Pakiety</a>
+            <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="en/fund.html">Fund</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Nauka</h4>
+        <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="pl/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="en/nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Kontakt</h4>
+        <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="pl/index.html#contacts">Kontakt</a></li>
+          <li><a href="en/index.html#contacts">Contact</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
+                    <a href="en/privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="pl/regulamin.html">Regulamin</a>
+                    <a href="en/terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="en/fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -364,7 +363,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -380,8 +379,8 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
-    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
+    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
