--- a/pl/11_blog-nexss-programmer/installation/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/installation/nexss-blog.html
@@ -154,6 +154,7 @@ permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a class="active" href="pl/11_blog-nexss-programmer/installation/nexss-blog.html"><strong>Installation</strong> </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
