--- a/pl/nexss-blog.html
+++ b/pl/nexss-blog.html
@@ -158,6 +158,7 @@ permalink: /pl/nexss-blog.html
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/frontend/nexss-blog.html">Frontend </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
@@ -193,7 +194,18 @@ permalink: /pl/nexss-blog.html
               </div>
       <div class="column2">
         <h1>News</h1>
-<h2>Nexss Programmer release <b>2.5.51</b></h2>
+<h2>Nexss Programmer release <b>2.5.58</b> - Vue2 and React17</h2>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">November 9th, 2021</span></p>
+<ul>
+<li>New functionality. Create new project types (<strong>vue2</strong>, <strong>react17</strong>) with <strong>hot reloading</strong>.</li>
+</ul>
+<pre><code class="language-sh">nexss p vue2 myproject-vue2
+nexss p react17 myproject-react17 --install</code></pre>
+<p>option <strong>--install</strong> installs all necessary packages.</p>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.58">more</a>
+<h2>Nexss Programmer release <b>2.5.51</b></h2></li>
+</ul>
 <p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 24th, 2021</span></p>
 <p>Fix for Linux: Package update was showing getShell not found. (@nexssp/package)</p>
 <ul>
